# forgeswarm

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-repo-intake-and-swarm-setup/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/phases/03-workspace-shell-and-supervision-ux/: 03-01-PLAN.md  03-01-SUMMARY.md
.planning/phases/04-local-persistence-and-demo-data/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/phases/05-mock-orchestration-engine/: 05-01-PLAN.md  05-01-SUMMARY.md
.planning/phases/06-git-isolation-layer/: 06-01-PLAN.md  06-01-SUMMARY.md
.planning/phases/07-diff-review-checks-and-merge-queue/: 07-01-PLAN.md  07-01-SUMMARY.md
.planning/phases/08-settings-polish-and-delivery-assets/: 08-01-PLAN.md  08-01-SUMMARY.md  08-01-VERIFY.md
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ScreenTabs.tsx
apps/desktop/src/lib/: app-storage.test.ts  app-storage.ts  git-isolation.ts  repository-service.test.ts  repository-service.ts
apps/desktop/src/screens/: HomeScreen.tsx  MergeQueueScreen.tsx  PlaceholderScreen.tsx  SettingsScreen.tsx  SwarmSetupScreen.tsx  WorkspaceScreen.tsx
